Small spacing fix for mobile screens - couldn't select the bottom most option due to navbar covering it

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -133,7 +133,7 @@
   }
 
   #quizContainer {
-    padding-bottom: 8dvh !important;
+    padding-bottom: 12dvh !important;
   }
 
   #resultsScreen {
